<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">




    <TextView

        android:id="@+id/update_pass"
        android:layout_width="370dp"
        android:layout_height="100dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="70dp"
        android:gravity="center_vertical"
        android:text="@string/change_pass"
        android:textColor="#000905"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/input9"
        android:layout_width="381dp"
        android:layout_height="70dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/input"
        android:hint="@string/ed1"
        android:textColorHint="#fff"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/input10"
        android:layout_marginLeft="17dp"
        android:layout_width="381dp"
        android:layout_height="70dp"
        android:layout_marginTop="22dp"
        android:hint="@string/ed7"
        android:inputType="textPassword"
        android:textColorHint="#fff"
        android:textSize="24sp"
        android:background="@drawable/input"

        />
    <Button android:id="@+id/button3"
        android:layout_width="370dp"
        android:layout_height="60dp"
        android:text="@string/update"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:background="@drawable/button1"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="22dp"

        />


</LinearLayout>